# my-portfolio

./: .env.example  .env.example.jinja  .fastapicloudignore  .gitignore  AGENTS.md  README.md  alembic.ini  copier.yml  design-qa.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  cli.py  main.py  models.py  schemas.py  seed.py
app/api/: admin.py  auth.py  health.py  items.py  portfolio.py  portfolio_admin.py
app/auth/: __init__.py  cookies.py  dependencies.py  password_reset.py  security.py
app/core/: config.py
app/db/: session.py
app/integrations/: __init__.py  email.py  redis.py
app/portfolio/: __init__.py  contact.py  content.py  media.py  models.py  publishing.py  schemas.py  seed.py
backend/: README.md
docs/: auth-rbac.md  contributing.md  fastapi-cloud.md  integrations.md  library-skills.md  portfolio-cms.md  publishing.md
frontend/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/components/: AppShell.tsx  DataTable.tsx  ErrorBoundary.tsx  RowActions.tsx  theme.tsx  ui.tsx
frontend/tests/: auth-admin.spec.ts  portfolio.spec.ts
migrations/: env.py  script.py.mako
migrations/versions/: 202606220001_initial.py  202606230001_items_and_account_parity.py  202607130001_portfolio_branding_seo.py  8d6b927b3d83_portfolio_cms_foundation.py
scripts/: commit-msg-limit.py  copy-to-wsl.sh
tests/: conftest.py  test_auth_rbac.py  test_portfolio_cms.py
(+47 files in other folders)
